[package]
name = "assert4rs"
description = "Fluent assertions for Rust"
homepage = "https://github.com/peterpaul/assert4rs"
repository = "https://github.com/peterpaul/assert4rs"
readme = "README.md"
version = "0.1.1"
authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
